--- a/PracTwoView/Base.lproj/Main.storyboard
+++ b/PracTwoView/Base.lproj/Main.storyboard
@@ -25,10 +25,10 @@
             </objects>
             <point key="canvasLocation" x="840" y="967"/>
         </scene>
-        <!--View Controller-->
+        <!--View Controller2-->
         <scene sceneID="mr8-5a-kUt">
             <objects>
-                <viewController id="4qe-0w-alS" sceneMemberID="viewController">
+                <viewController id="4qe-0w-alS" customClass="ViewController2" customModule="PracTwoView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zGc-Jn-HTR"/>
                         <viewControllerLayoutGuide type="bottom" id="dlj-Wv-meP"/>
@@ -43,7 +43,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eJW-cM-2U5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1221" y="967"/>
+            <point key="canvasLocation" x="1227" y="967"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="xSq-jx-ER7">
