--- a/PracTwoView/Base.lproj/Main.storyboard
+++ b/PracTwoView/Base.lproj/Main.storyboard
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--First-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PracTwoView" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="hPv-GL-Gt9">
+                    <navigationItem key="navigationItem" title="First" id="hPv-GL-Gt9">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="RaA-AY-tEr">
                             <connections>
                                 <segue destination="4qe-0w-alS" kind="push" id="tTW-J8-vyx"/>
@@ -31,7 +31,7 @@
             </objects>
             <point key="canvasLocation" x="840" y="967"/>
         </scene>
-        <!--View Controller2-->
+        <!--Second-->
         <scene sceneID="mr8-5a-kUt">
             <objects>
                 <viewController id="4qe-0w-alS" customClass="ViewController2" customModule="PracTwoView" customModuleProvider="target" sceneMemberID="viewController">
@@ -44,7 +44,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="maY-W6-k1F"/>
+                    <navigationItem key="navigationItem" title="Second" id="maY-W6-k1F"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
