--- a/PracTwoView/Base.lproj/Main.storyboard
+++ b/PracTwoView/Base.lproj/Main.storyboard
@@ -23,6 +23,9 @@
                                 <state key="normal" title="Second">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="SecondButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="13l-zi-Wiw"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -60,6 +63,9 @@
                                 <state key="normal" title="First">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="FirstButton:" destination="4qe-0w-alS" eventType="touchUpInside" id="jvR-y1-MWI"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
